Changelog for Config-INI

{{$NEXT}}
        - bump up required Mixin::Linewise to help out Win32 users

0.024     2014-04-05 21:31:54-04:00 America/New_York
        - MIGHT BREAK YOUR CODE (but probably won't):
          handle_unparsed_line now receives its arguments in reversed order
        - new methods exist and more methods now receive the filehandle to make
          subclassing more flexible

0.023     2014-03-13 10:21:15+01:00 Europe/Paris
        - specify minimum Mixin::Linewise requirement (thanks, Andreas Koenig
          and Smylers)

0.022     2014-01-30 16:57:43-05:00 America/New_York
        - remove the last few places IO::String was used (thanks, Graham Knop)

0.021     2013-10-20 11:33:59 America/New_York
        - throw an exception if line 1 appears to start with a UTF-8 BOM
        - typo fixes in docs (thanks, David Steinbrunner!)

0.020     2013-07-01 21:30:50 America/New_York
          update bugtracker

0.019     2011-12-15 17:03:14 America/New_York
          provide handle_unparsed_line

0.018     2011-06-02 21:51:50 America/New_York
          bump up version of IO::File required (thanks, ABH!)

0.017     2010-12-11 10:20:34 America/New_York
          avoid test failures on Win32 by using . instead of TMPDIR
          for writing test files (thanks, Ahmad M. Zawawi)

0.016     2010-09-04
          add Mixin::Linewise to CARP_NOT -- better reporting of error location

0.015     2010-08-22
          documentation improvements (thanks, castaway)

0.014     2009-01-16
          add repo to metadata

0.013     2008-06-05
          refactored some of the read_* write_* stuff to Mixin::Linewise

0.012     2008-04-12
          BUG FIX: allow for different error message on cygwin

          fixed typo in docs (thanks HDP)

0.011     2007-11-19
          BUG FIX: "0" was not a valid section name

0.010     2007-11-04
          BUG FIX: detect when we're dumping something we won't be able to read